--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,10 @@
-name: Release
+name: Tauri Release (GitHub + Telegram)
+
 on:
   push:
     tags:
-      - 'v*'
-  workflow_dispatch:
-
+      - 'v*' # 触发标签为 v1.0.0 这种格式
+  workflow_dispatch: # 支持手动触发
 
 jobs:
   release:
@@ -15,67 +15,54 @@ jobs:
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Node.js setup
-        uses: actions/setup-node@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: 'npm'
 
-      - name: Rust setup
+      - name: Setup Rust
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
 
-      - name: Rust cache
-        uses: Swatinem/rust-cache@v2
-        with:
-          # An explicit cache key that is used instead of the automatic `job`-based
-          # cache key and is thus stable across jobs.
-          # Default: empty
-          shared-key: ""
+      - name: Update Cargo Dependencies
+        run: |
+          cargo update -p time --precise 0.3.35 || true
+          cargo install cargo-edit
+          cargo add --upgrade time@0.3.35
 
-          # An additional cache key that is added alongside the automatic `job`-based
-          # cache key and can be used to further differentiate jobs.
-          # Default: empty
-          key: ""
-
-          # A whitespace separated list of env-var *prefixes* who's value contributes
-          # to the environment cache key.
-          # The env-vars are matched by *prefix*, so the default `RUST` var will
-          # match all of `RUSTC`, `RUSTUP_*`, `RUSTFLAGS`, `RUSTDOC_*`, etc.
-          # Default: "CARGO CC CFLAGS CXX CMAKE RUST"
-          env-vars: ""
-
-          # The cargo workspaces and target directory configuration.
-          # These entries are separated by newlines and have the form
-          # `$workspace -> $target`. The `$target` part is treated as a directory
-          # relative to the `$workspace` and defaults to "target" if not explicitly given.
-          # Default: ". -> target"
-          workspaces: ""
-
-          # Determines if the cache should be saved even when the workflow has failed.
-          # Default: "false"
-          cache-on-failure: ""
-
-      - name: Install dependencies (ubuntu only)
+      - name: Install System Dependencies (Linux)
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
-      - name: Install app dependencies
+          sudo apt-get install -y \
+            libgtk-3-dev webkit2gtk-4.0 \
+            libappindicator3-dev librsvg2-dev patchelf
+
+      - name: Install System Dependencies (macOS)
+        if: matrix.platform == 'macos-latest'
+        run: |
+          brew install pkg-config cairo pango libpng jpeg giflib webkit2gtk@4.1
+          brew link --force webkit2gtk@4.1
+
+      - name: Install System Dependencies (Windows)
+        if: matrix.platform == 'windows-latest'
+        run: |
+          choco install -y vcredist2015 visualstudio2022-workload-vctools
+          refreshenv
+
+      - name: Install App Dependencies
         run: npm install
 
-      - name: Build project
-        run: npm run tauri build
-
-      - name: Build App
-        id: pxq-release
+      - name: Build & Release via Tauri Action
         uses: tauri-apps/tauri-action@v0
         env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tagName: v__VERSION__ 
+          tagName: v__VERSION__
           releaseName: 'v__VERSION__'
           releaseBody: ${{ github.event.head_commit.message }}
           releaseDraft: false
@@ -85,23 +72,24 @@ jobs:
     runs-on: ubuntu-latest
     needs: release
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-        
-    - name: Install dependencies
-      run: pip install requests python-telegram-bot --user
-      
-    - name: Execute Python script
-      env:
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }} 
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }} 
-        OWNER: ${{ secrets.OWNER }} 
-        REPO: ${{ secrets.REPO }} 
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-      run: |
-        python upload_to_telegram.py
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install Python dependencies
+        run: |
+          pip install requests python-telegram-bot --user
+
+      - name: Upload to Telegram
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          OWNER: ${{ secrets.OWNER }}
+          REPO: ${{ secrets.REPO }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          python upload_to_telegram.py
