--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Add/Update time crate to 0.3.35
         run: |
+          cd src-tauri
           cargo add time@0.3.35
 
       - name: Install System Dependencies (Linux)
