--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Rust setup
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable # 这可能会拉取 Rust 1.80.0 或更高版本
+          toolchain: stable
 
       - name: Rust cache
         uses: Swatinem/rust-cache@v2
@@ -33,14 +33,13 @@ jobs:
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf libsoup2.4-dev # 添加了 libsoup2.4-dev
-
+          # 确保安装的是 libwebkit2gtk-4.0-dev 而不是 webkit2gtk-4.0
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf libsoup2.4-dev
+      
       - name: Install app dependencies (npm)
         run: npm install
 
       - name: Update Rust dependencies (to fix 'time' crate issue with Rust 1.80.0+)
-        # 这一步非常重要，用于解决 time crate < 0.3.35 与 Rust 1.80.0+ 的兼容性问题
-        # 它会更新 Cargo.lock 文件中的依赖版本
         working-directory: ./src-tauri # 确保在 Tauri 项目的 Rust 部分执行 cargo 命令
         run: cargo update
 
@@ -78,8 +77,6 @@ jobs:
           # releaseBodyFile: CHANGELOG.md # 推荐使用 CHANGELOG 文件
           releaseDraft: false
           prerelease: false
-          # tauri-action v0 会自动查找常见的构建产物路径
-          # 如果你的产物路径非常特殊，可能需要配置 artifactsPath 或 include
 
   upload_to_telegram:
     runs-on: ubuntu-latest
@@ -95,12 +92,12 @@ jobs:
         python-version: '3.x'
         
     - name: Install Python dependencies
-      run: pip install requests python-telegram-bot --user # --user 可能在某些环境中不是必须的，但通常无害
+      run: pip install requests python-telegram-bot --user
     
     - name: Download all build artifacts
       uses: actions/download-artifact@v4
       with:
-        path: ./artifacts-for-telegram # 所有产物会下载到这个目录下的对应子目录 (如 tauri-app-macos-latest 等)
+        path: ./artifacts-for-telegram
 
     - name: List downloaded files (for debugging)
       run: ls -R ./artifacts-for-telegram
@@ -111,7 +108,7 @@ jobs:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }} 
         OWNER: ${{ github.repository_owner }}
         REPO: ${{ github.event.repository.name }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # 如果脚本需要访问 GitHub API
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         TAG_NAME: ${{ github.ref_name }}
         ARTIFACTS_PATH: ./artifacts-for-telegram
       run: |
